--- a/dashboard/views/home.html
+++ b/dashboard/views/home.html
@@ -2,7 +2,7 @@
         <nav>
         <div class="nav-wrapper blue darken-3">
             <div class="container">
-                <a href="#!" class="center brand-logo">Logo</a>
+                <a href="#!" class="center brand-logo">Cosa</a>
                 
             </div>
         </div>
@@ -13,7 +13,7 @@
         <div class="row">
             <div class="col s12 m12">
                 <div class="card-panel blue lighten-1">
-                <div id="calendar_basic" ng-init="ejemploGrafica()" style="width:100%; height: 100%;"></div>
+                <div id="calendar_basic" onload="calendarExample()" style="width:100%; height: 100%;"></div>
                 </div>
             </div>
             <div class="col s12 m6">
@@ -25,7 +25,7 @@
             </div>
             <div class="col s12 m6">
                 <div class="card-panel blue lighten-1">
-                    <div google-chart chart="myChartObject"  class="center" style="height:100%; width:100%;"></div>
+                    <div id="chart_div" style="width: 100%; height: 100%;"></div>
                 </div>
             </div>
         </div>
