--- a/dashboard/views/home.html
+++ b/dashboard/views/home.html
@@ -1,36 +1,42 @@
 <header>
-        <nav>
-        <div class="nav-wrapper blue darken-3">
+    <nav>
+        <div class="nav-wrapper blue-grey darken-2">
             <div class="container">
-                <a href="#!" class="center brand-logo">Cosa</a>
+                <a href="#!" class="center middle brand-logo">Smart-MailBox</a>
                 
+                <div class="chip cyan white-text" ng-if="!estado">
+                    <i class="close material-icons">email</i>
+                    Tienes Correo
+                </div>
+
+                <p class="right">{{time}}</p>
             </div>
         </div>
-        </nav>    
+    </nav>
 </header>
 <main class="main" ng-init="cargarResumen()">
     <div class="container">
         <div class="row">
             <div class="col s12 m12">
-                <div class="card-panel blue lighten-1">
-                <div id="calendar_basic" onload="calendarExample()" style="width:100%; height: 100%;"></div>
+                <div class="card-panel blue-grey lighten-4">
+                    <div id="calendar_basic" onload="calendarExample()" style="width:100%; height: 100%;"></div>
                 </div>
             </div>
             <div class="col s12 m6">
-                <div class="card-panel blue lighten-1">
-                <span class="white-text">I am a very simple card. I am good at containing small bits of information.
+                <div class="card-panel blue-grey lighten-4">
+                    <span class="white-text">I am a very simple card. I am good at containing small bits of information.
                 I am convenient because I require little markup to use effectively. I am similar to what is called a panel in other frameworks.
                 </span>
                 </div>
             </div>
             <div class="col s12 m6">
-                <div class="card-panel blue lighten-1">
+                <div class="card-panel blue-grey lighten-4">
                     <div id="chart_div" style="width: 100%; height: 100%;"></div>
                 </div>
             </div>
         </div>
         <div class="fixed-action-btn">
-        <a class="right btn btn-floating pulse"><i class="material-icons">autorenew</i></a>
+            <a class="right btn btn-floating cyan pulse"><i class="material-icons">autorenew</i></a>
         </div>
     </div>
 
