--- a/dashboard/views/home.html
+++ b/dashboard/views/home.html
@@ -1,8 +1,8 @@
 <header>
     <nav>
-        <div class="nav-wrapper blue-grey darken-2">
+        <div class="nav-wrapper grey darken-3">
             <div class="container">
-                <a href="#!" class="center middle brand-logo">Smart-MailBox</a>
+                <a href="#!" class="center middle brand-logo"><b>Smart-MailBox</b></a>
                 
                 <div class="chip cyan white-text" ng-if="!estado">
                     <i class="close material-icons">email</i>
@@ -18,19 +18,19 @@
     <div class="container">
         <div class="row">
             <div class="col s12 m12">
-                <div class="card-panel blue-grey lighten-4">
-                    <div id="calendar_basic" onload="calendarExample()" style="width:100%; height: 100%;"></div>
+                <div class="card-panel grey lighten-3 ">
+                    <div id="calendar_basic" onload="calendarExample()"></div>
                 </div>
             </div>
             <div class="col s12 m6">
-                <div class="card-panel blue-grey lighten-4">
-                    <span class="white-text">I am a very simple card. I am good at containing small bits of information.
+                <div class="card-panel grey lighten-3">
+                    <span >I am a very simple card. I am good at containing small bits of information.
                 I am convenient because I require little markup to use effectively. I am similar to what is called a panel in other frameworks.
                 </span>
                 </div>
             </div>
             <div class="col s12 m6">
-                <div class="card-panel blue-grey lighten-4">
+                <div class="card-panel grey lighten-3">
                     <div id="chart_div" style="width: 100%; height: 100%;"></div>
                 </div>
             </div>
