--- a/dashboard/views/home.html
+++ b/dashboard/views/home.html
@@ -3,12 +3,6 @@
         <div class="nav-wrapper grey darken-3">
             <div class="container">
                 <a href="#!" class="center middle brand-logo"><b>Smart-MailBox</b></a>
-                
-                <div class="chip cyan white-text" ng-if="!estado">
-                    <i class="close material-icons">email</i>
-                    Tienes Correo
-                </div>
-
                 <p class="right">{{time}}</p>
             </div>
         </div>
@@ -17,21 +11,68 @@
 <main class="main" ng-init="cargarResumen()">
     <div class="container">
         <div class="row">
-            <div class="col s12 m12">
-                <div class="card-panel grey lighten-3 ">
-                    <div id="calendar_basic" onload="calendarExample()"></div>
+            <div class="col s12">
+                <div class="col s4">
+                    <div class="card-panel grey lighten-3 ">
+                        <ul class="collection">
+                            <li class="collection-item avatar">
+                                <img src="img/tempicon.png" alt="" class="circle">
+                                <span class="title">Temperatura</span>
+                                <p>{{tempNow}}ºC
+                                </p>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col s4">
+                    <div class="card-panel grey lighten-3">
+                        <ul class="collection" ng-if="estado!=0">
+                            <li class="collection-item avatar">
+                                <i class="material-icons circle green">mail</i>
+                                <span class="title">Tiene correo</span>
+                                <p>Cantidad: {{estado}}
+                                </p>
+                            </li>
+                        </ul>
+
+                        <ul class="collection" ng-if="estado==0">
+                            <li class="collection-item avatar">
+                                <i class="material-icons circle">mail</i>
+                                <span class="title">No tiene correo</span>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col s4">
+                    <div class="card-panel grey lighten-3 ">
+                        <ul class="collection">
+                            <li class="collection-item avatar">
+                                <img src="img/humidityicon.png" alt="" class="circle">
+                                <span class="title">Humedad</span>
+                                <p>{{humNow}}%
+                                </p>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
-            <div class="col s12 m6">
-                <div class="card-panel grey lighten-3">
-                    <span >I am a very simple card. I am good at containing small bits of information.
-                I am convenient because I require little markup to use effectively. I am similar to what is called a panel in other frameworks.
-                </span>
+        </div>
+        <div class="row">
+            <div class="col s12">
+                <div class="col s12 m12">
+                    <div class="card-panel grey lighten-3 ">
+                        <div id="calendar_basic" onload="calendarExample()"></div>
+                    </div>
                 </div>
-            </div>
-            <div class="col s12 m6">
-                <div class="card-panel grey lighten-3">
-                    <div id="chart_div" style="width: 100%; height: 100%;"></div>
+                <div class="col s12 m6">
+                    <div class="card-panel grey lighten-3">
+                        <div id="curve_chart" style="width: 100%; height: 100%"></div>
+                    </div>
+                </div>
+                <div class="col s12 m6">
+                    <div class="card-panel grey lighten-3">
+                        <div id="curve_chart2" style="width: 100%; height: 100%"></div>
+                    </div>
                 </div>
             </div>
         </div>
