--- a/dashboard/views/home.html
+++ b/dashboard/views/home.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="row">
             <div class="col s12">
-                <div class="col s4">
+                <div class="col s12 m4">
                     <div class="card-panel grey lighten-3 ">
                         <ul class="collection">
                             <li class="collection-item avatar transparent">
@@ -24,7 +24,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col s4">
+                <div class="col s12 m3">
                     <div class="card-panel grey lighten-3">
                         <ul class="collection" ng-if="estado!=0">
                             <li class="collection-item avatar transparent">
@@ -44,7 +44,12 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col s4">
+                <div class="col s12 m2">
+                    <div class="card-panel grey lighten-3">
+                        <img ng-src="{{puertas}}" class="responsive-img">
+                    </div>
+                </div>
+                <div class="col s12 m3">
                     <div class="card-panel grey lighten-3">
                         <ul class="collection">
                             <li class="collection-item avatar transparent">
@@ -65,6 +70,7 @@
                         <div id="calendar_basic" onload="calendarExample()"></div>
                     </div>
                 </div>
+     
                 <div class="col s12 m6">
                     <div class="card-panel grey lighten-3">
                         <div id="curve_chart" style="width: 100%; height: 100%"></div>
