mailbox status images up

--- a/dashboard/views/home.html
+++ b/dashboard/views/home.html
@@ -12,8 +12,8 @@
     <div class="container">
         <div class="row">
             <div class="col s12">
-                <div class="col s12 m4">
-                    <div class="card-panel grey lighten-3 ">
+                <div class="col s12 m3">
+                    <div class="card-panel grey lighten-3 sameh">
                         <ul class="collection">
                             <li class="collection-item avatar transparent">
                                 <img src="img/tempicon.png" alt="" class="circle">
@@ -25,7 +25,7 @@
                     </div>
                 </div>
                 <div class="col s12 m3">
-                    <div class="card-panel grey lighten-3">
+                    <div class="card-panel grey lighten-3 sameh">
                         <ul class="collection" ng-if="estado!=0">
                             <li class="collection-item avatar transparent">
                                 <i class="material-icons circle cyan">mail</i>
@@ -44,13 +44,13 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col s12 m2">
-                    <div class="card-panel grey lighten-3">
+                <div class="col s12 m3 ">
+                    <div class="card-panel grey lighten-3 sameh">
                         <img ng-src="{{puertas}}" class="responsive-img">
                     </div>
                 </div>
-                <div class="col s12 m3">
-                    <div class="card-panel grey lighten-3">
+                <div class="col s12 m3 ">
+                    <div class="card-panel grey lighten-3 sameh">
                         <ul class="collection">
                             <li class="collection-item avatar transparent">
                                 <img src="img/humidityicon.png" alt="" class="circle">
