--- a/dashboard/views/home.html
+++ b/dashboard/views/home.html
@@ -46,7 +46,7 @@
                 </div>
                 <div class="col s12 m3 ">
                     <div class="card-panel grey lighten-3 sameh">
-                        <img ng-src="{{puertas}}" class="" style="height:95%; margin-left: 15%;">
+                        <img ng-src="{{puertas}}" class="" style="height:95%; width:auto; margin-left: 15%;">
                     </div>
                 </div>
                 <div class="col s12 m3 ">
