--- a/dashboard/views/home.html
+++ b/dashboard/views/home.html
@@ -13,7 +13,7 @@
         <div class="row">
             <div class="col s12">
                 <div class="col s12 m3">
-                    <div class="card-panel grey lighten-3 sameh">
+                    <div class="card-panel grey lighten-3">
                         <ul class="collection">
                             <li class="collection-item avatar transparent">
                                 <img src="img/tempicon.png" alt="" class="circle">
@@ -25,7 +25,7 @@
                     </div>
                 </div>
                 <div class="col s12 m3">
-                    <div class="card-panel grey lighten-3 sameh">
+                    <div class="card-panel grey lighten-3">
                         <ul class="collection" ng-if="estado!=0">
                             <li class="collection-item avatar transparent">
                                 <i class="material-icons circle cyan">mail</i>
@@ -45,12 +45,12 @@
                     </div>
                 </div>
                 <div class="col s12 m3 ">
-                    <div class="card-panel grey lighten-3 sameh">
-                        <img ng-src="{{puertas}}" class="" style="height:95%; width:auto; margin-left: 15%;">
+                    <div class="card-panel grey lighten-3">
+                        <img ng-src="{{puertas}}" class="responsive-img">
                     </div>
                 </div>
                 <div class="col s12 m3 ">
-                    <div class="card-panel grey lighten-3 sameh">
+                    <div class="card-panel grey lighten-3">
                         <ul class="collection">
                             <li class="collection-item avatar transparent">
                                 <img src="img/humidityicon.png" alt="" class="circle">
