--- a/dashboard/views/home.html
+++ b/dashboard/views/home.html
@@ -67,7 +67,7 @@
             <div class="col s12">
                 <div class="col s12 m12">
                     <div class="card-panel grey lighten-3 ">
-                        <div id="calendar_basic" onload="calendarExample()"></div>
+                        <div id="calendar_basic"></div>
                     </div>
                 </div>
      
